Enrich the about page

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -69,5 +69,14 @@
   </li>
 </div>
 
+<div id="about-account-template" style="display:none;">
+  <p>
+    <b>Username: </b> {{username}}<br/>
+    <b>Name: </b> {{firstname}} {{lastname}}<br/>
+    <b>Email: </b> {{email}}
+  </p>
+</div>
+
+
 
 {% endraw %}
