--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div data-role="footer" data-theme="b"  data-position="fixed">
-    <h2>KRE Devtools</h2>
+    <h2>KRE Developer Tools</h2>
 </div><!-- /footer -->
 <!--     </div> -->
 
