--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -25,10 +25,11 @@
 
 <div id="installed-channels-template" style="display:none;">
    <div id="{{id}}" data-role="collapsible" data-filtertext="{{name}} ({{channel}})" data-theme="a" data-content-theme="a">
-     <h2>{{name}} ({{cid}})</h2>
+   <h2>{{channels}} </h2>
+   <!--  <h2>{{name}} ({{cid}})</h2>
      <div>
          <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-channel?rid={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Uninstall</a></p>
-       <p>{{status}}</p>
+       <p>{{status}}</p> -->
      </div>
    </div>
 </div>
