--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -26,7 +26,7 @@
 <div id="installed-channels-template" style="display:none;">
    <div id="{{id}}" data-role="collapsible" data-filtertext="{{name}} ({{channel}})" data-theme="a" data-content-theme="a">
      <h2>{{channel_name}} ({{cid}})</h2>
-  <!--   <div>
+    <div><!-- 
          <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-channel?rid={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Uninstall</a></p>
        <p>{{status}}</p> -->
      </div>
