--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -26,11 +26,22 @@
 <div id="installed-channels-template" style="display:none;">
    <div id="{{cid}}" data-role="collapsible" data-filtertext="{{channel_name}} ({{cid}})" data-theme="a" data-content-theme="a">
      <h2>{{channel_name}} ({{cid}})</h2>
-    <div><!-- 
-         <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-channel?rid={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Uninstall</a></p>
-       <p>{{status}}</p> -->
+    <div> 
+         <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-channel?channel={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Uninstall</a></p>
+       <p><b>Channel ID:</b> {{cid}}
      </div>
    </div>
+</div>
+
+<div id="confirm-channel-remove-template" style="display:none;">
+  <li data-role="list-divider" >Uninstall Channel</li>
+  <li>
+  <p>Uninstall Channel {{cid}}?</p>
+  <p>
+    <a id="remove-channel-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Uninstall</a>
+    <a href="#page-channel-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+  </p>
+  </li>
 </div>
 
 <div id="installed-ruleset-template" style="display:none;">
