--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -36,7 +36,7 @@
 <div id="confirm-channel-remove-template" style="display:none;">
   <li data-role="list-divider" >Uninstall Channel</li>
   <li>
-  <p>Uninstall Channel {{cid}}?</p>
+  <p>Uninstall Channel {{channel}}?</p>
   <p>
     <a id="remove-channel-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Uninstall</a>
     <a href="#page-channel-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
