solved bug with devtools not reconized.

--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -60,7 +60,7 @@
   <script src="js/fuse-api-config.js"></script> -->
 
   <!--getting access for devtools-api-->
-  <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
+  <script src="https://rawgit.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
  <!-- <script src="js/devtools-api-config.js"></script> -->
 
 
