adding notification plugin

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -97,6 +97,9 @@
 
     <script type="text/javascript" src="https://rawgit.com/Picolab/picologging/master/js/picologging-api.js"></script>
 
+    <script type="text/javascript" src="noty/js/noty/packaged/jquery.noty.packaged.min.js"></script>
+    <script type="text/javascript" src="noty/js/noty/packaged/jquery.noty.packaged.js"></script>
+
 
 
 </body>
