--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -28,7 +28,8 @@
      <h2>{{channel_name}} ({{cid}})</h2>
     <div> 
          <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-channel?channel={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
-       <p><b>Channel ID:</b> {{cid}}
+         <h2>Channel Attributes</h2>
+       <p><b>Channel ID:</b> {{cid}}</p>
      </div>
    </div>
 </div>
@@ -36,11 +37,12 @@
 <div id="confirm-channel-remove-template" style="display:none;">
   <li data-role="list-divider" >Delete Channel</li>
   <li>
-  <p>Delete Channel {{channel}}?</p>
   <p>
+  <h3>Delete Channel {{channel}}?</h3>
     <a id="remove-channel-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
     <a href="#page-channel-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
   </p>
+  <h1>Do NOT delete channels unless you know what your doing.<br> Deletion of key channels will destroy your account.</h1>
   </li>
 </div>
 
