spelling and rules

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -42,7 +42,7 @@
     <a id="remove-channel-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
     <a href="#page-channel-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
   </p>
-  <h1>Do NOT delete channels unless you know what your doing.<br> Deletion of key channels will destroy your account.</h1>
+  <h1>Do NOT delete channels unless you know what you're doing.<br> Deletion of key channels could make your pico inoperable.</h1>
   </li>
 </div>
 
