--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -26,9 +26,9 @@
 <div id="installed-channels-template" style="display:none;">
    <div id="{{cid}}" data-role="collapsible" data-filtertext="{{channel_name}} ({{cid}})" data-theme="a" data-content-theme="a">
      <h2>{{channel_name}} ({{cid}})</h2>
-    <div> 
-         <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-channel?channel={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
-         <h2>Channel Attributes</h2>
+    <div style = "padding-top: 18px; padding-bottom:24px;"> 
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#confirm-uninstall-channel?channel={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
+         <!--<h2>Channel Attributes</h2>-->
        <p><b>Channel ID:</b> {{cid}}</p>
      </div>
    </div>
