delete and flush buttons in manage-list
Removed the delete and flush from the update-url page. Added them to
the collapsable set instead. One bug with delete button having to go to
home page at the moment. Issue when trying to just have it refresh the
page and it goes to the about empty page. Reoccurring problem needing
to be taken care of.

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -6,12 +6,13 @@
      		{{rid}} <span><p style="font-weight:normal; font-size:12px;">{{uri}}</p></span>
      </h4>
      
-    <div style = "padding-top: 10px; padding-bottom:40px;"> 
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#updating-url?rid={{rid}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit Ruleset</a></p>
+    <div style = "padding-top: 10px; padding-bottom:20px;"> 
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#updating-url?rid={{rid}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit URL</a></p>
 
-         <!--<p style="position:relative; top:-20px"><a href="#" id="flush-rid-button2" style="float:right;" data-role="button" data-icon="refresh" data-iconpos="notext" data-theme="a" data-inline="true" class="ui-btn ui-icon-refresh ui-btn-icon-right">Flush</a></p>
+         <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-btn ui-icon-refresh ui-btn-icon-right flushButton">Flush</a></p>
 
-         <p style="position:relative; top:-20px"><a href="#updating-url?rid={{rid}}" style="float:right;" data-role="button" data-icon="delete" data-iconpos="notext" data-theme="a" data-inline="true" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right">Delete</a></p>-->
+         <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton">Delete</a></p>
+
          <p>Actions to take:</p>
      </div>
    </div>
