#21, shows old URL when updating registered RID

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -7,7 +7,7 @@
      </h4>
      
     <div style = "padding-top: 10px; padding-bottom:20px;"> 
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#updating-url?rid={{rid}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit URL</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#updating-url?rid={{rid}}&url={{encoded}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit URL</a></p>
 
          <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-btn ui-icon-refresh ui-btn-icon-right flushButton">Flush</a></p>
 
