--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -49,7 +49,7 @@
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Last Active:</b> {{time}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#confirm-uninstall-channel?channel={{cid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#confirm-uninstall-channel?channel={{cid}}&name={{channel_name}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
        <p><b>Channel ID:</b> {{cid}}</p>
      </div>
    </div>
@@ -69,7 +69,8 @@
   <li data-role="list-divider" >Delete Channel</li>
   <li>
   <p>
-  <h3>Delete Channel {{channel}}?</h3>
+  <h3>Name: {{name}} 
+  </br> Channel ID: {{channel}}</h3>
     <a id="remove-channel-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
     <a href="#page-channel-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
   </p>
