--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -48,6 +48,7 @@
      <h4>{{channel_name}} ({{cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Last Active:</b> {{time}}</p>
+        <p><b>Type:</b> {{type}}</p> 
         <p><b>Attributes:</b> {{attributes}}</p>
          <p style="position:relative; top:-20px"><a style="float:right;" href="#confirm-uninstall-channel?channel={{cid}}&name={{channel_name}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
        <p><b>Channel ID:</b> {{cid}}</p>
