--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -152,10 +152,16 @@
 
   <!-- -------------------- <End oF> Scheduled Templates---------------------- -->
   <!-- -------------------- subscriptions Templates---------------------- -->
-
+<div id="subscription-tab-template" style="display:none;">
+   <div id="{{Type}}" data-role="collapsible" data-filtertext="{{Type}}" data-theme="a" data-content-theme="a">
+     <h4>{{Type}}</h4>
+    <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="{{Type}}2">
+    </div>
+   </div>
+</div>
 <div id="subscription-incoming-template" style="display:none;">
-   <div id="{{e_cid}}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
-     <h4>{{name}} ({{e_cid}}})</h4>
+   <div id="{{e_cid}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
+     <h4>{{name}} ({{e_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
@@ -168,21 +174,22 @@
    </div>
 </div>
 <div id="subscription-out-going-template" style="display:none;">
-   <div id="{{b_cid}}}" data-role="collapsible" data-filtertext="{{name}} ({{b_cid}})" data-theme="a" data-content-theme="a">
-     <h4>{{name}} ({{b_cid}}})</h4>
+   <div id="{{b_cid}}" data-role="collapsible" data-filtertext="{{name}} ({{b_cid}})" data-theme="a" data-content-theme="a">
+     <h4>{{name}} ({{b_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Back Channel:</b> {{b_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#cancel-subscription?backChannel={{b_cid}}}&name={{name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete ">Cancel</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right; margin: 0px;" href="#cancel-subscription?backChannel={{b_cid}}&name={{name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete ">Cancel</a></p>
+         <br>
      </div>
    </div>
 </div>
 <div id="subscription-template" style="display:none;">
-   <div id="{{e_cid}}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
-     <h4>{{name}} ({{e_cid}}})</h4>
+   <div id="{{e_cid}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
+     <h4>{{name}} ({{e_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
