--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -168,8 +168,8 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#reject-subscription?eventChannel={{e_cid}}}&name={{name}}" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete ">Reject</a></p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#approve-subscription?eventChannel={{e_cid}}}&name={{name}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete ">Approve</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#reject-subscription?eventChannel={{e_cid}}&name={{name}}" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete ">Reject</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#approve-subscription?eventChannel={{e_cid}}&name={{name}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete ">Approve</a></p>
      </div>
    </div>
 </div>
@@ -197,7 +197,7 @@
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Back Channel:</b> {{b_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#un-subscribe-subscription?eventChannel={{e_cid}}}&name={{name}}" 
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#un-subscribe-subscription?eventChannel={{e_cid}}&name={{name}}" 
          data-role="button" data-icon="un-subscribe" class="ui-btn ui-icon-delete ">Un-Subscribe</a></p>
      </div>
    </div>
