comment out that template

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -41,7 +41,7 @@
 </div>
 
 <div id="installed-channels-template2" style="display:none;">
-   <div id="{{cid}}" data-role="collapsible" data-filtertext="{{channel_name}} ({{cid}})" data-theme="a" data-content-theme="a">
+   <!-- <div id="{{cid}}" data-role="collapsible" data-filtertext="{{channel_name}} ({{cid}})" data-theme="a" data-content-theme="a">
      <h4>{{channel_name}} ({{cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Last Active:</b> {{time}}</p>
@@ -50,7 +50,7 @@
          <p style="position:relative; top:-20px"><a style="float:right;" href="#confirm-uninstall-channel?channel={{cid}}&name={{channel_name}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Delete</a></p>
        <p><b>Channel ID:</b> {{cid}}</p>
      </div>
-   </div>
+   </div> -->
 </div>
 
 <div id="confirm-channel-remove-template" style="display:none;">
