i didnt like it

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -33,11 +33,11 @@
 </div>
 
 <div id="installed-channels-template" style="display:none;">
-   <!-- <div id="{{Type}}" data-role="collapsible" data-filtertext="{{Type}}" data-theme="a" data-content-theme="a"> -->
-     <!-- <h4>{{Type}}</h4> -->
+   <div id="{{Type}}" data-role="collapsible" data-filtertext="{{Type}}" data-theme="a" data-content-theme="a">
+     <h4>{{Type}}</h4>
     <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="{{Type}}2">
     </div>
-   <!-- </div> -->
+   </div>
 </div>
 
 <div id="installed-channels-template2" style="display:none;">
