correct variable names

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -88,7 +88,7 @@
   <p>
   <h3>Remove Client {{client}}?</h3>
     <a id="remove-client-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Remove</a>
-    <a href="#oAuth-client-registration" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+    <a href="" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
   </p>
   <h1>Do NOT remove clients unless you know what you're doing.</h1>
   </li>
