Hooking up children list

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -134,6 +134,12 @@
     <b>Email: </b> {{email}}
   </p>
 </div>
+
+<div id="child-pico-template" style="display:none">
+   <div data-role="collapsible" data-theme="a" data-content-theme="a">
+     <h4>ECI: {{eci}}</h4>
+   </div>
+</div>
   <!-- -------------------- Scheduled Templates---------------------- -->
 
 <div id="scheduled-events-template" style="display:none;">
