child picos listed

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -137,7 +137,7 @@
 
 <div id="child-pico-template" style="display:none">
    <div data-role="collapsible" data-theme="a" data-content-theme="a">
-     <h4>ECI: {{eci}}</h4>
+     <h4>{{eci}}</h4>
    </div>
 </div>
   <!-- -------------------- Scheduled Templates---------------------- -->
