child picos now creatable and navigatable

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -138,6 +138,11 @@
 <div id="child-pico-template" style="display:none">
    <div data-role="collapsible" data-theme="a" data-content-theme="a">
      <h4>{{eci}}</h4>
+	 
+     <div style = "padding-top: 10px; padding-bottom:20px;"> 
+		 <p><b>ECI:</b>{{eci}}</p>
+		 <p style="position:relative; top:-20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-arrow-r ui-btn-icon-right openPicoButton">Open This Pico</a></p>
+      </div>
    </div>
 </div>
   <!-- -------------------- Scheduled Templates---------------------- -->
