--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -61,6 +61,8 @@
 
   <!--getting access for devtools-api-->
   <script src="https://rawgit.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
+  <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/nano_manager.js"></script>
+  <script src="js/nano_manager-config.js"></script>
  <!-- <script src="js/devtools-api-config.js"></script> -->
 
 
