--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -94,6 +94,9 @@
     <script src="js/CloudOS-config.js"></script>
     <script src="js/app.js"></script>
 
+    <script src="js/nano_manager.js"></script>
+    <script src="js/nano_manager-config.js"></script>
+
     <script src="js/devtools-api.js"></script>
     <script src="js/devtools-api-config.js"></script>
 
