--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -53,8 +53,6 @@
   <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   <script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
   <script src="js/handlebars-v1.3.0.js"></script>
-  <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
-  <script src="js/CloudOS-config.js"></script>
   <!--  <script src="https://rawgit.com/kynetx/Fuse-API/master/js/fuse-api.js"></script> -->
   <!-- <script src="https://s3.amazonaws.com/Fuse_assets/js/fuse-api-1.0.0.js"></script>
   <script src="js/fuse-api-config.js"></script> -->
@@ -71,7 +69,7 @@
 
   $("document").ready(function() {
 
-    CloudOS.getOAuthAccessToken(CloudOS.retrieveOAuthCode(), function(oauth_payload)
+    nano_manager.getOAuthAccessToken(nano_manager.retrieveOAuthCode(), function(oauth_payload)
     {
       if (!oauth_payload.OAUTH_ECI) {
         alert("Authentication failed. We apologize for this inconvenience. Please try again.");
@@ -89,7 +87,7 @@
           console.log("something went wrong with the OAuth authorization " + json);
           alert("Something went wrong with your authorization. Please try again. ");
           // not ideal, but...
-          window.location = "https://" + CloudOS.login_server + "/login";
+          window.location = "https://" + nano_manager.login_server + "/login";
         }
         );
 });
