--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -98,7 +98,8 @@
     <script src="js/devtools-api.js"></script>
     <script src="js/devtools-api-config.js"></script>
 
-    <script type="text/javascript" src="https://rawgit.com/Picolab/picologging/master/js/picologging-api.js"></script>
+   <!-- <script type="text/javascript" src="https://rawgit.com/Picolab/picologging/master/js/picologging-api.js"></script> needs to be updated not to use CloudOS.... untill then use local copy -->
+    <script type="text/javascript" src="js/picologging-api.js"></script>
 
     <script type="text/javascript" src="noty/js/noty/packaged/jquery.noty.packaged.min.js"></script>
     <script type="text/javascript" src="noty/js/noty/packaged/jquery.noty.packaged.js"></script>
