--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -191,7 +191,7 @@
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
         <p><b>Relationship:</b> {{relationship}}</p>
-        <p><b>Back Channel:</b> {{b_cid}}</p>
+        <p><b>Target Channel:</b> {{t_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
          <p style="position:relative; top:-20px"><a style="float:right; margin: 0px;" href="#cancel-subscription?backChannel={{b_cid}}&name={{name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete ">Cancel</a></p>
          <br>
