small changes from personal code review.

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -171,7 +171,7 @@
    </div>
 </div>
 <div id="subscription-incoming-template" style="display:none;">
-   <div id="{{e_cid}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
+   <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
      <h4>{{name}} ({{e_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
@@ -179,13 +179,13 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#reject-incoming-subscription?eventChannel={{e_cid}}&name={{c_name}}" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete RejectButton">Reject</a></p>
-         <p style="position:relative; top:-20px"><a id="approve-button" style="float:right;" href="#approve-incoming-subscription?eventChannel={{e_cid}}&name={{c_name}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete ApproveButton ">Approve</a></p>
+         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete RejectButton">Reject</a></p>
+         <p style="position:relative; top:-20px"><a id="approve-button" style="float:right;" href="#" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete ApproveButton ">Approve</a></p>
      </div>
    </div>
 </div>
 <div id="subscription-out-going-template" style="display:none;">
-   <div id="{{b_cid}}" data-role="collapsible" data-filtertext="{{name}} ({{b_cid}})" data-theme="a" data-content-theme="a">
+   <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{b_cid}})" data-theme="a" data-content-theme="a">
      <h4>{{name}} ({{b_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
@@ -193,13 +193,13 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Target Channel:</b> {{t_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right; margin: 0px;" href="#cancel-subscription?backChannel={{b_cid}}&name={{c_name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton">Cancel</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right; margin: 0px;" href="#" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton">Cancel</a></p>
          <br>
      </div>
    </div>
 </div>
 <div id="subscription-template" style="display:none;">
-   <div id="{{e_cid}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
+   <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
      <h4>{{name}} ({{e_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
@@ -208,44 +208,12 @@
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Back Channel:</b> {{b_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#un-subscribe-subscription?eventChannel={{e_cid}}&name={{name}}" 
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#" 
          data-role="button" data-icon="un-subscribe" class="ui-btn ui-icon-delete UnSubscribeButton">Un-Subscribe</a></p>
      </div>
    </div>
 </div>
-<div id="confirm-reject-subscription-template" style="display:none;">
-  <li data-role="list-divider" >Reject Subscription</li>
-  <li>
-  <p>
-  <h3>Name: {{name}} 
-  </br> Event Channel ID: {{e_cid}}</h3>
-    <a id="reject-subscription-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Reject</a>
-    <a href="#page-subscription-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
-  </p>
-  </li>
-</div>
-<div id="confirm-un-subscription-template" style="display:none;">
-  <li data-role="list-divider" >Un-Subscription</li>
-  <li>
-  <p>
-  <h3>Name: {{name}} 
-  </br> Event Channel ID: {{e_cid}}</h3>
-    <a id="un-subscription-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Un-Subscription</a>
-    <a href="#page-subscription-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
-  </p>
-  </li>
-</div>
-<div id="confirm-cancel-subscription-template" style="display:none;">
-  <li data-role="list-divider" >Cancel Subscription</li>
-  <li>
-  <p>
-  <h3>Name: {{name}} 
-  </br> Event Channel ID: {{e_cid}}</h3>
-    <a id="cancel-subscription-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Cancel Subscription</a>
-    <a href="#page-subscription-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
-  </p>
-  </li>
-</div>
+
 
   <!-- -------------------- <End oF> subscriptions Templates---------------------- -->
 
