--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -185,8 +185,8 @@
    </div>
 </div>
 <div id="subscription-out-going-template" style="display:none;">
-   <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{b_cid}})" data-theme="a" data-content-theme="a">
-     <h4>{{name}} ({{b_cid}})</h4>
+   <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{t_cid}})" data-theme="a" data-content-theme="a">
+     <h4>{{name}} ({{t_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
