--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -171,7 +171,7 @@
    </div>
 </div>
 <div id="subscription-incoming-template" style="display:none;">
-   <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
+   <div id="{{c_name}}" data-channelname= {{c_name}} data-eventeci={{e_cid}}  data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
      <h4>{{name}} ({{e_cid}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
         <p><b>Name:</b> {{name}}</p>
